gitops/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: influxdb
  labels:
    app.kubernetes.io/name: influxdb
    app.kubernetes.io/component: database
    app.kubernetes.io/part-of: soil-moisture-probe
