gitops/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: influxdb
  namespace: influxdb
  labels:
    app: influxdb
    app.kubernetes.io/name: influxdb
    app.kubernetes.io/component: database
    app.kubernetes.io/part-of: soil-moisture-probe
spec:
  type: ClusterIP
  selector:
    app: influxdb
  ports:
    - name: http
      port: 8181
      targetPort: http
      protocol: TCP
